# jack

./: .env.example  .gitignore  pyproject.toml  streamrip.toml.example
app/: config.py  downloader.py  main.py  paths.py  qobuz.py
app/static/: app.js  index.html  styles.css
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  table.tsx
