[project]
name = "jack"
version = "0.1.0"
description = "Small local web app for searching Qobuz and importing Streamrip downloads into Navidrome."
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.115.14",
  "httpx==0.28.1",
  "python-dotenv==1.2.2",
  "streamrip==2.1.0",
  "uvicorn[standard]==0.35.0",
]

[tool.uv]
package = false

[project.scripts]
jack = "app.main:app"
